--- a/API/wwwroot/css/root.css
+++ b/API/wwwroot/css/root.css
@@ -4,24 +4,49 @@
 	--color-surface: rgb(64, 64, 64);
 	--color-onSurface: white;
 	--color-primary: cornflowerblue;
+	--default-font: "Verdana";
+}
+body,
+html {
+	margin: 0 !important;
+	padding: 0 !important;
 }
 * {
-	font-family: "Verdana";
+	font-family: var(--default-font);
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	background-color: var(--color-background);
 	color: var(--color-onBackground);
 }
-
-body {
-	width: 100%;
-	height: 100%;
-	background-color: var(--color-background);
+input {
+	background-color: var(--color-surface);
+	color: var(--color-onSurface);
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+input[type="text"],
+input[type="password"] {
+	outline: 1px solid var(--color-onBackground);
+	border-radius: 3px;
+	background-color: var(--color-surface);
+	color: var(--color-onSurface);
+	padding: 0.5em 1em 0.5em 1em;
+	margin: 0 1em´0 1em;
+}
+input[type="button"],
+input[type="submit"] {
+	font-family: var(--default-font);
+	font-size: 1em;
+	outline: 1px solid var(--color-onBackground);
+	border-radius: 3px;
+	background-color: var(--color-surface);
+	color: var(--color-onSurface);
+	padding: 0.5em 1em 0.5em 1em;
 }
 
-#page-wrapper {
-	outline: 1px solid white;
-	height: 100%;
-	width: 100%;
+input[type="button"]:hover,
+input[type="submit"]:hover {
+	background-color: var(--color-primary);
+	cursor: pointer;
 }
