--- a/API/wwwroot/css/index.css
+++ b/API/wwwroot/css/index.css
@@ -1,22 +1,24 @@
+#page-wrap,
+#nav-bar {
+	padding: 1em;
+}
 #page-wrap {
 	width: 100%;
 	flex-shrink: 0;
 	flex-grow: 1;
-
-	/* background-color: rgba(255, 0, 0, 0.1); */
 }
 #nav-bar {
 	width: 100%;
 	min-height: 5em;
-	border-bottom: 1px solid var(--color-primary);
 	flex-grow: 0;
 	flex-shrink: 0;
+    border-bottom: 2px solid var(--color-primary);
 }
 
 #body-wrap {
-	margin: 0 !important;
-	padding: 0 !important;
-	border: none !important;
+	margin: 0;
+	padding: 0;
+	border: none;
 	width: 100%;
 	height: 100vh;
 
