--- a/API/wwwroot/css/root.css
+++ b/API/wwwroot/css/root.css
@@ -26,7 +26,8 @@ input {
 	margin-bottom: 0.5em;
 }
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="number"] {
 	outline: 1px solid var(--color-onBackground);
 	border-radius: 3px;
 	background-color: var(--color-surface);
@@ -46,7 +47,21 @@ input[type="submit"] {
 }
 
 input[type="button"]:hover,
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="number"]:hover {
 	background-color: var(--color-primary);
 	cursor: pointer;
+}
+
+.center-content-horizontal {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+}
+
+.center-content-horizontal {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
